--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@ body{
     padding-left: 60px;
   }
   
+  .icon{
+    float: left;
+    position: absolute;
+  }
+
   /* Style the links inside the navigation bar */
   .navbar a {
     float: left;
@@ -26,6 +31,9 @@ body{
     font-size: 17px;
   }
   
+  .nav-container{
+    margin-left: 50px;
+  }
   /* Change the color of links on hover */
   .navbar a:hover {
     background-color: #ddd;
@@ -35,10 +43,9 @@ body{
   .navbar img{
     width: 45px;
     height: 45px;
-    position: fixed;
+    position: relative;
     left: 0;
     padding-left: 8px;
-    margin-right: 20px;
   }
 
   .head{
@@ -62,7 +69,7 @@ body{
     background-color: black;
     opacity: 0.7;
     color: white;
-    height: 40px;
+    height: 55px;
     font-size: 35px;
     padding-left: 30px;
     padding-right: 30px;
@@ -111,8 +118,29 @@ body{
     text-align: left;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 18px;
+    margin-top: -10px;
  }
 
- .story h2{
-    float: left;
+ h2{
+    text-align: left;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+ }
+
+ .card{
+    width: 17rem;
+    text-align: center;
+ }
+
+ .card img{
+    width: 50%;
+    height: 50%;
+    align-self: center;
+    margin-top: 10px;
+ }
+
+ .cards{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 30px;
  }
